# vins_ws

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  run_one_exp1_no_imu_noise_mode.sh
scrips/: check_fog_xsens_alignment.py  convert_kaist_global_pose_all.py  eval_kaist_28_39.sh  run_many.sh  run_one.sh  view_metrics.sh  vio_csv_to_tum.py
src/VINS-Fusion-ROS2-jazzy/: .gitignore  README.md  commands.txt
src/VINS-Fusion-ROS2-jazzy/vins/: CMakeLists.txt
src/Visual/keyframe_pipeline/: Visualize.py  analyze_local_factor_graph.py  build_reliability_dataset.py  build_reliability_dataset_v3_backup.py  build_reliability_labels.py  build_reliability_labels_v3_backup.py  build_vins_reliability_dataset.py  build_vins_reliability_labels.py  camera_info.yaml  debug_infer_predictions.py  debug_reliability_model.py  extract_features.py  infer_reliability.py  keyframe_selector.py  local_factor_backend.py  local_factor_graph_backend.py  matcher.py  reliability_infer_node.py  run_all_kaist_future_reliability.sh  run_all_kaist_future_reliability_v4.sh  run_all_kaist_future_reliability_v41.sh  (+4 more)
src/kaist_player/: package.xml  setup.cfg  setup.py
src/kaist_player/config/: urban28_pankyo.yaml  urban28_pankyo_fog.yaml  urban29_pankyo_fog.yaml  urban30-gangnam_fog.yaml  urban39_pankyo_fog.yaml
src/kaist_player/kaist_player/: kaist_player_node.py
src/kaist_player/launch/: kaist_player.launch.py
src/ros2_ws/: commands.txt
src/ros2_ws/data_collector/: package.xml  setup.py
src/ros2_ws/data_collector/data_collector/: collector_node.py  format_utils.py  io_utils.py  rolling_buffer.py
(+27 files in other folders)
