<?xml version="1.0"?>
<package format="3">
  <name>kaist_player</name>
  <version>0.0.1</version>
  <description>ROS2 native KAIST stereo + IMU player for VINS-Fusion</description>

  <maintainer email="ivlab3@example.com">ivlab3</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
